analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/RegularClassInCommonModule.kmp.java
public final class ClassToCheck /* common.pack.ClassToCheck*/ {
  public  ClassToCheck();//  .ctor()
}
